# logidize

./: Cargo.toml  LICENSE  README.md
macros/src/: lib.rs
src/: colors.rs  filter_maps.rs  lib.rs  multi_threaded.rs  single_threaded.rs  sinks.rs  utils.rs  writers.rs
src/loggers/: mod.rs  multi_threaded.rs  single_threaded.rs
src/utils/: colors.rs  filter_maps.rs  mod.rs  sinks.rs  writers.rs
testing/: Cargo.toml
testing/src/: main.rs
