[package]
name = "logidize"
version = "0.5.2"
authors = ["GereonV"]
edition = "2021"
description = "A lightweight and performant logging utility"
documentation = "https://docs.rs/logidize"
readme = "README.md"
repository = "https://github.com/GereonV/logidize"
license = "MIT"
keywords = ["log", "logger", "logging"]
categories = ["development-tools::debugging"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2.30"
